--- a/calci.css
+++ b/calci.css
@@ -1,10 +1,16 @@
 
 .h1{
   text-align: center;
-  font-family: 'Roboto', sans-serif;
+  font-family: Arial, Helvetica, sans-serif;
+  color: white;
   font-size: 40px;
   margin-top: 60px;
   font-weight: bolder;
+  border: 2px solid #fff; /* Border color */
+  border-radius: 10px; /* Border radius for rounded corners */
+  overflow: hidden; /* Hide overflow content */
+  padding: 20px; /* Add padding inside the container */
+  backdrop-filter: blur(15px); /* Apply blur effect to the background inside the container */
 }
 
 
@@ -20,5 +26,14 @@
 .item-center{
   justify-content: center;
   justify-items: center;
+}
+.container2{
+  border: 2px solid #fff; /* Border color */
+  border-radius: 10px; /* Border radius for rounded corners */
+  overflow: hidden; /* Hide overflow content */
+  padding: 20px; /* Add padding inside the container */
+  backdrop-filter: blur(15px); /* Apply blur effect to the background inside the container */
+  height: 250px;
+  width: 400px;
 }
 
